--- a/core/css/app.css
+++ b/core/css/app.css
@@ -20,10 +20,10 @@
         font-size: large;
         line-height: 1.6em;
         overflow: hidden;
-        font-family: 'Carrois Gothic SC', sans-serif;
+        font-family: Anonymous Pro, sans-serif;
         text-align: center;
         color: rgb(51, 51, 51);
-        background-color: #2c3e50;
+        background-color: #eeeeee;
     }
 
     img, div {
