--- a/core/css/base.css
+++ b/core/css/base.css
@@ -1,44 +1,105 @@
 ﻿@media all {
     #wrapper-main {
-        top: 0;
-        left: 0;
-        position: absolute;
         width: 100%;
         height: 100%;
         overflow: hidden;
         /*background-color: #2c3e50;*/
     }
-
-    #wrapper-start {
-        top: 0;
-        left: 0;
-        position: absolute;
+    #wrapper-base {
         width: 100%;
         height: 100%;
         overflow: hidden;
+        background-color: #62756C;
     }
 
-    #wrapper-title {
-        top: 0;
-        left: 0;
-        position: absolute;
+    #wrapper-header {
+        width: 100%;
+        height: 15%;
+    }
+
+    #wrapper-body {
+        width: 100%;
+        height: 85%;
+        padding: 12px;
+    }
+
+    #display-body {
         width: 100%;
         height: 100%;
-        overflow: hidden;
+        padding: 2px;
+        border-radius: 8px;
+        background-color: #eeeeee;
+        box-shadow: inset 0 0 4px 2px rgba(0,0,0,0.85);
     }
 
-    #wrapper-title .title {
+    #display-menu {
         position: absolute;
-        color: #bdc3c7;
-        font-size: 100px;
-        font-weight: 400;
+        top: 0;
+        left: 0;
+        width: 80%;
+        height: 100%;
+        border-radius: 8px;
+        background-color: #778E84;
+        box-shadow: 0 0 2px 1px rgba(0,0,0,0.5);
     }
 
-    #wrapper-title .title-inactive {
-        color: #bdc3c7;
+    #wall-base-left {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 13px;
+        height: 100%;
+        background-color: #62756C;
     }
 
-    .fa-25x {
-        font-size: 2.5em;
+    #wall-base-right {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 13px;
+        height: 100%;
+        background-color: #62756C;
+    }
+
+    .time {
+        width: 100%;
+        height: 60%;
+        padding-top: 18px;
+        background-color: #62756C;
+        color: #eee;
+        font-size: 36px;
+        text-shadow: -1px -1px 2px rgba(0, 0, 0, 1);
+        letter-spacing: 4px;
+        font-weight: 700;
+    }
+
+    .date {
+        width: 100%;
+        height: 40%;
+        padding-top: 4px;
+        background-color: #62756C;
+        color: #eee;
+        font-size: 24px;
+        text-shadow: -1px -1px 2px rgba(0, 0, 0, 1);
+        letter-spacing: 4px;
+        font-weight: 700;
+    }
+
+    .row-full {
+        height: 100%;
+        padding-top: 12px;
+        padding-bottom: 12px;
+    }
+
+    .hightlight-color {
+        color: #eee;
+    }
+
+    .fa-lineheight-3x {
+        line-height: 1.5em;
+    }
+
+    .fa-inset-shadow {
+        text-shadow: -1px -1px 2px rgba(0, 0, 0, 1);
     }
 }
