--- a/core/css/app.css
+++ b/core/css/app.css
@@ -20,13 +20,15 @@
     body {
         width: 100%;
         height: 100%;
+        max-width: 414px;
+        max-height: 736px;
         font-size: large;
         line-height: 1.6em;
         overflow: hidden;
         font-family: Righteous, sans-serif;
         text-align: center;
         color: rgba(255,255,255,0.7);
-        background-color: #eeeeee;
+        background-color: #000000;
     }
 
     img, div {
