--- a/core/css/app.css
+++ b/core/css/app.css
@@ -11,6 +11,10 @@
         -webkit-font-smoothing: antialiased;
     }
 
+    ::-webkit-scrollbar { 
+        display: none; 
+    }
+
     html {
         width: 100%;
         height: 100%;
@@ -25,7 +29,7 @@
         font-size: large;
         line-height: 1.6em;
         overflow: hidden;
-        font-family: Righteous, sans-serif;
+        font-family: Archivo Narrow, sans-serif;
         text-align: center;
         color: rgba(255,255,255,0.7);
         background-color: #000000;
@@ -54,6 +58,10 @@
         visibility: hidden;
     }
 
+    .invisible {
+        opacity: 0;
+    }
+
     .clear {
         clear: both;
     }
@@ -68,6 +76,10 @@
 
     .right {
         text-align: right;
+    }
+
+    .uppercase {
+        text-transform: uppercase;
     }
 
 }
