--- a/core/css/base.css
+++ b/core/css/base.css
@@ -8,6 +8,19 @@
         background-repeat: no-repeat !important;
         max-width: 414px;
         max-height: 736px;
+        overflow: hidden;
+    }
+
+    #wrapper-side {
+        position: absolute;
+        top: 0;
+        left: 100%;
+        padding: 40px 16px 8px 24px;
+        width: 100%;
+        height: 100%;
+        overflow-y: auto;
+        max-width: 414px;
+        max-height: 736px;
     }
 
     #wrapper-home {
@@ -24,6 +37,20 @@
     }
 
     #wrapper-alarms {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 8px 16px 8px 24px;
+        width: 100%;
+        height: 100%;
+        overflow-y: auto;
+        opacity: 0;
+        max-width: 414px;
+        max-height: 736px;
+        overflow: hidden;
+    }
+
+    #wrapper-users {
         position: absolute;
         top: 0;
         left: 0;
