--- a/core/css/frame2.css
+++ b/core/css/frame2.css
@@ -10,7 +10,7 @@
 
     .frame2-inner {
         position: relative;
-        padding: 8px 6px 0 0;
+        padding: 8px 6px 2px 0;
         border: 3px solid rgba(255,255,255,.6);
         border-top: transparent;
         border-radius: 2px;
@@ -23,7 +23,7 @@
         background-color: rgba(255,255,255,0.6);
         top: 0;
         left: 0;
-        width: 25%;
+        width: 23%;
     }
 
     .frame2-stroke-center {
@@ -32,8 +32,8 @@
         height: 3px;
         background-color: rgba(255,255,255,0.6);
         top: 0;
-        left: 44%;
-        width: 10%;
+        left: 45%;
+        width: 8%;
     }
 
     .frame2-stroke-right {
@@ -43,19 +43,20 @@
         background-color: rgba(255,255,255,0.6);
         top: 0;
         right: 0;
-        width: 25%;
+        width: 22%;
     }
 
     .frame2-text-top {
         position: absolute;
         text-transform: uppercase;
         top: -11px;
-        left: -15%;
+        left: -16%;
         padding: 0;
         width: 100%;
         letter-spacing: .15em;
-        font-size: x-small;
+        font-size: small;
         color: rgba(255,255,255,0.75);
+        font-weight: 700;
         text-shadow: 0 0 1px rgba(0, 0, 0, 0.75);
     }
 
@@ -63,13 +64,14 @@
         position: absolute;
         text-transform: uppercase;
         top: -11px;
-        left: 15%;
+        left: 16%;
         padding: 0;
         width: 100%;
-        letter-spacing: .15em;
-        font-size: x-small;
-        color: rgba(255,255,255,0.75);
-        text-shadow: 0 0 1px rgba(0, 0, 0, 0.75);
+        letter-spacing: .2em;
+        font-size: small;
+        color: rgba(255,255,255,0.85);
+        font-weight: 700;
+        text-shadow: 0 0 1px rgba(0, 0, 0, 0.85);
     }
 
     .frame2-text-left {
@@ -87,6 +89,7 @@
         letter-spacing: .2em;
         font-weight: 400;
         color: rgba(255,255,255,0.75);
+        font-weight: 700;
         text-shadow: 0 0 2px rgba(0, 0, 0, 0.75);
     }
 
@@ -110,6 +113,6 @@
     }
 
     .frame2-day-inactive {
-        color: rgba(128,128,128,0.7);
+        color: rgba(255,255,255,0.35);
     }
 }
