--- a/core/css/ikut.css
+++ b/core/css/ikut.css
@@ -7319,6 +7319,8 @@ button.close {
  */
 .bootstrap-datetimepicker-widget {
   list-style: none;
+  color: rgba(0, 0, 0, 0.5);
+  text-shadow: 0 0 1px rgba(0, 0, 0, 1);
 }
 .bootstrap-datetimepicker-widget.dropdown-menu {
   margin: 2px 0;
@@ -7621,7 +7623,7 @@ button.close {
   display: inline-block;
   border: solid transparent;
   border-width: 0 0 7px 7px;
-  border-bottom-color: #337ab7;
+  border-bottom-color: rgba(0, 0, 0, 0.75);
   border-top-color: rgba(0, 0, 0, 0.2);
   position: absolute;
   bottom: 4px;
@@ -7629,7 +7631,7 @@ button.close {
 }
 .bootstrap-datetimepicker-widget table td.active,
 .bootstrap-datetimepicker-widget table td.active:hover {
-  background-color: #337ab7;
+  background-color: rgba(0, 0, 0, 0.75);
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
@@ -7656,7 +7658,7 @@ button.close {
   background: #eeeeee;
 }
 .bootstrap-datetimepicker-widget table td span.active {
-  background-color: #337ab7;
+  background-color: rgba(0, 0, 0, 0.75);
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
@@ -9879,6 +9881,20 @@ button.close {
         overflow: hidden;
     }
 
+    #wrapper-pushes {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 8px 16px 8px 24px;
+        width: 100%;
+        height: 100%;
+        overflow-y: auto;
+        opacity: 0;
+        max-width: 414px;
+        max-height: 736px;
+        overflow: hidden;
+    }
+
     #wrapper-frame {
         position: absolute;
         top: 0;
@@ -10487,12 +10503,26 @@ button.close {
     }
 
     .user-list-inner .user-item {
-        text-transform: uppercase;
+        text-transform: lowercase;
         font-size: medium;
         font-weight: 700;
         padding-top: 8px;
         padding-bottom: 16px;
         color: rgba(255,255,255,0.75);
+    }
+
+    .user-list-inner .user-item-none {
+        text-transform: lowercase;
+        font-size: medium;
+        font-weight: 700;
+        padding-top: 8px;
+        padding-bottom: 16px;
+        color: rgba(255,255,255,0.75);
+        border: none;
+    }
+
+    .form-control-feedback {
+        top: 2px !important;
     }
 
     .user-list-inner .col-xs-10 {
@@ -10518,6 +10548,18 @@ button.close {
     .user-list-inner .user-item:first-child {
         padding: 0 4px;
         border-bottom: transparent;
+    }
+
+    .badge {
+        padding-left: 10px;
+    }
+
+    .warn {
+        font-weight: 700;
+        font-size: small;
+        font-style: italic;
+        color: rgb(171, 131, 73);
+        text-shadow: none;
     }
 }
 
