--- a/core/css/base.css
+++ b/core/css/base.css
@@ -78,6 +78,34 @@
         overflow: hidden;
     }
 
+    #wrapper-star {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 8px 16px 8px 24px;
+        width: 100%;
+        height: 100%;
+        overflow-y: auto;
+        opacity: 0;
+        max-width: 414px;
+        max-height: 736px;
+        overflow-y: auto;
+    }
+
+    #wrapper-popup {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 8px 16px 8px 24px;
+        width: 100%;
+        height: 100%;
+        overflow-y: auto;
+        opacity: 0;
+        max-width: 414px;
+        max-height: 736px;
+        overflow-y: auto;
+    }
+
     #wrapper-frame {
         position: absolute;
         top: 0;
