add fake white background for desktop view

--- a/core/css/app.css
+++ b/core/css/app.css
@@ -32,7 +32,7 @@
         font-family: Archivo Narrow, sans-serif;
         text-align: center;
         color: rgba(255,255,255,0.7);
-        background-color: #000000;
+        background-color: #eeeeee;
     }
 
     img, div {
