--- a/core/css/base.css
+++ b/core/css/base.css
@@ -1,4 +1,14 @@
 ﻿@media all {
+    #wrapper-fakebackground {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 0;
+        height: 0;
+        background-color: #eeeeee;
+        z-index: 9999;
+    }
+
     #wrapper-main {
         width: 100%;
         height: 100%;
