--- a/core/css/ikut.css
+++ b/core/css/ikut.css
@@ -10019,6 +10019,7 @@ button.close {
         background: rgba(3,11,51,.1);
         border-radius: 2px;
         /*box-shadow: inset 0 0 1px 0 rgba(0,0,0,0.25);*/
+        cursor: pointer;
     }
 
     .frame-inner {
@@ -10110,6 +10111,7 @@ button.close {
         background: rgba(3,11,51,.1);
         border-radius: 2px;
         /*box-shadow: inset 0 0 1px 0 rgba(0,0,0,0.25);*/
+        cursor: pointer;
     }
 
     .frame2-inner {
@@ -10229,6 +10231,7 @@ button.close {
         background: rgba(3,11,51,.1);
         border-radius: 2px;
         /*box-shadow: inset 0 0 1px 0 rgba(0,0,0,0.25);*/
+        cursor: pointer;
     }
 
     .button-inner {
@@ -10287,6 +10290,25 @@ button.close {
         text-shadow: 0 0 2px rgba(0, 0, 0, 0.75);
         font-size: small;
     }
+
+
+
+
+    .btn-color1 {
+        background-color: hsla(210,60%,25%,0.35);
+    }
+
+    .btn-color1:active {
+        background-color: hsla(210,60%,25%,0.5);
+    }
+
+    .btn-color2 {
+        background-color: hsla(0, 59%, 27%, 0.35);
+    }
+
+    .btn-color2:active {
+        background-color: hsla(0, 59%, 27%, 0.5);
+    }
 }
 
 @media all {
@@ -10314,6 +10336,7 @@ button.close {
         width: 100%;
         height: 100%;
         padding: 0 2px 4px 2px;
+        cursor: pointer;
     }
 
     .menu-inner {
@@ -10375,6 +10398,7 @@ button.close {
         border-radius: 2px;
         height: 100%;
         /*box-shadow: inset 0 0 1px 0 rgba(0,0,0,0.25);*/
+        cursor: pointer;
     }
 
     .detail-inner {
