--- a/core/css/detail.css
+++ b/core/css/detail.css
@@ -43,6 +43,7 @@
         border-radius: 2px;
         height: 100%;
         /*box-shadow: inset 0 0 1px 0 rgba(0,0,0,0.25);*/
+        cursor: pointer;
     }
 
     .detail-inner {
