--- a/core/css/frame.css
+++ b/core/css/frame.css
@@ -39,6 +39,7 @@
         background: rgba(3,11,51,.1);
         border-radius: 2px;
         /*box-shadow: inset 0 0 1px 0 rgba(0,0,0,0.25);*/
+        cursor: pointer;
     }
 
     .frame-inner {
