--- a/core/css/frame2.css
+++ b/core/css/frame2.css
@@ -6,6 +6,7 @@
         background: rgba(3,11,51,.1);
         border-radius: 2px;
         /*box-shadow: inset 0 0 1px 0 rgba(0,0,0,0.25);*/
+        cursor: pointer;
     }
 
     .frame2-inner {
