--- a/core/css/menu.css
+++ b/core/css/menu.css
@@ -23,6 +23,7 @@
         width: 100%;
         height: 100%;
         padding: 0 2px 4px 2px;
+        cursor: pointer;
     }
 
     .menu-inner {
